ops/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: hello-service
  namespace: "hello2"
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    component: web
